# aiteen

./: .envrc  .gitignore  README.md  blocks.ipynb  fable_ftue.ipynb  i18n_checker.py  i18n_patch_locales.py  i18n_qa.py  i18n_translator.py  logs.txt  pyproject.toml  scrapbook.ipynb  seed_phrases.ipynb
.direnv/: envs.toml
locale_comparison/: english_labels.csv  intermediate_translations.json  locale_key_comparison_consolidated.csv  locale_translation_comparison.csv  translated_locale_key_comparison_consolidated.csv  unused_keys.csv
locale_comparison_wxtm/: english_labels.csv  locale_key_comparison_consolidated.csv  locale_translation_comparison.csv  translated_locale_key_comparison_consolidated.csv
