[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["Simon Hill <simonhill303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
base58 = "^2.1.1"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.9.2"
openai = "^1.50.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
